[package]
name = "rocketapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
sea-orm = "0.5.0"
#kube = { version = "0.65.0", features = ["runtime","derive"] }
#k8s-openapi = { version = "0.13.1", default-features = false, features = ["v1_22"] }
#tokio = { version = "1.15.0",features = ["full"]}




